force-app/main/default/objects/PLDC__c/PLDC__c.object-meta.xml
<CustomObject>
    <description>This is the &quot;post live deal changes&quot; object which is a child object to Deal. It tracks any changes that are made to a deal after it is live.</description>
    <label>PLDC</label>
    <nameField>
        <displayFormat>PLDC-{000000}</displayFormat>
        <label>PLDC #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PLDCs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>