force-app/main/default/objects/PLDC__c/fields/Add_departure_date__c.field-meta.xml
<CustomField>
    <fullName>Add_departure_date__c</fullName>
    <label>Add departure date</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>