force-app/main/default/objects/PLDC__c/fields/Add_Remove_Allocations__c.field-meta.xml
<CustomField>
    <fullName>Add_Remove_Allocations__c</fullName>
    <label>Add/Remove Allocations</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>