force-app/main/default/objects/PLDC__c/fields/Allocations_Added_Removed__c.field-meta.xml
<CustomField>
    <fullName>Allocations_Added_Removed__c</fullName>
    <inlineHelpText>Please enter the number of allocations that are to be added or removed.</inlineHelpText>
    <label># Allocations Added / Removed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>