force-app/main/default/objects/PLDC__c/fields/Change_Departure_City_From__c.field-meta.xml
<CustomField>
    <fullName>Change_Departure_City_From__c</fullName>
    <inlineHelpText>Please select the current departure city that the deal is changing from.</inlineHelpText>
    <label>Change Departure City From</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>City</valueSetName>
    </valueSet>
</CustomField>