force-app/main/default/objects/PLDC__c/fields/Change_Departure_City_To__c.field-meta.xml
<CustomField>
    <fullName>Change_Departure_City_To__c</fullName>
    <label>Change Departure City To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>City</valueSetName>
    </valueSet>
</CustomField>