force-app/main/default/objects/PLDC__c/fields/Change_HSS__c.field-meta.xml
<CustomField>
    <fullName>Change_HSS__c</fullName>
    <label>Change HSS</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>