force-app/main/default/objects/PLDC__c/fields/Change_Min_Max__c.field-meta.xml
<CustomField>
    <fullName>Change_Min_Max__c</fullName>
    <label>Change Min/Max #</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>