force-app/main/default/objects/PLDC__c/fields/Close_Deal_Reason__c.field-meta.xml
<CustomField>
    <fullName>Close_Deal_Reason__c</fullName>
    <inlineHelpText>Please select the reason why you are closing this deal.</inlineHelpText>
    <label>Close Deal Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Low sales</fullName>
            </value>
            <value>
                <fullName>Reason A</fullName>
            </value>
            <value>
                <fullName>Reason B</fullName>
            </value>
            <value>
                <fullName>Reason C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>