force-app/main/default/objects/PLDC__c/fields/Date_of_PLDC_del__c.field-meta.xml
<CustomField>
    <fullName>Date_of_PLDC_del__c</fullName>
    <inlineHelpText>Please enter the date the change was made and updated on the live site.</inlineHelpText>
    <label>Date of PLDC</label>
    <type>Date</type>
</CustomField>