force-app/main/default/objects/PLDC__c/fields/Deal__c.field-meta.xml
<CustomField>
    <fullName>Deal__c</fullName>
    <inlineHelpText>This is the deal for these changes.</inlineHelpText>
    <label>Deal</label>
    <referenceTo>Deal__c</referenceTo>
    <relationshipLabel>PLDCs</relationshipLabel>
    <relationshipName>PLDCs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>