force-app/main/default/objects/PLDC__c/fields/departures_date__c.field-meta.xml
<CustomField>
    <fullName>departures_date__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please select the departure date that these allocations are related to.</inlineHelpText>
    <label>departures date</label>
    <referenceTo>departures_dates__c</referenceTo>
    <relationshipLabel>PLDCs</relationshipLabel>
    <relationshipName>PLDCs</relationshipName>
    <type>Lookup</type>
</CustomField>