force-app/main/default/objects/PLDC__c/fields/Extend_book_by__c.field-meta.xml
<CustomField>
    <fullName>Extend_book_by__c</fullName>
    <label>Extend book by</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>