force-app/main/default/objects/PLDC__c/fields/Has_the_nett_changed_for_this__c.field-meta.xml
<CustomField>
    <fullName>Has_the_nett_changed_for_this__c</fullName>
    <inlineHelpText>Especially important when adding new dates.</inlineHelpText>
    <label>Has the nett changed for this?</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>