force-app/main/default/objects/PLDC__c/fields/If_closing_a_date_please_specify_why__c.field-meta.xml
<CustomField>
    <fullName>If_closing_a_date_please_specify_why__c</fullName>
    <label>If closing a date, please specify why?</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>