force-app/main/default/objects/PLDC__c/fields/Main_Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Main_Action_Type__c</fullName>
    <inlineHelpText>Please select if this change is either to Add or Remove text.</inlineHelpText>
    <label>Main Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Add / Remove Allocations</fullName>
            </value>
            <value>
                <fullName>Add Dates</fullName>
            </value>
            <value>
                <fullName>Add Deal Option</fullName>
            </value>
            <value>
                <fullName>Change Departure Cities</fullName>
            </value>
            <value>
                <fullName>Change HSS</fullName>
            </value>
            <value>
                <fullName>Change Min / Max</fullName>
            </value>
            <value>
                <fullName>Close Deal</fullName>
            </value>
            <value>
                <fullName>Close Departure Date</fullName>
            </value>
            <value>
                <fullName>Extend Book By</fullName>
            </value>
            <value>
                <fullName>Reactivate Deal</fullName>
            </value>
            <value>
                <fullName>Remove Deal Option</fullName>
            </value>
            <value>
                <fullName>Update About the Deal</fullName>
            </value>
            <value>
                <fullName>Update Important Information</fullName>
            </value>
            <value>
                <fullName>Update What You Get</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>