force-app/main/default/objects/PLDC__c/fields/New_Date__c.field-meta.xml
<CustomField>
    <fullName>New_Date__c</fullName>
    <label>New Date</label>
    <type>Date</type>
</CustomField>