force-app/main/default/objects/PLDC__c/fields/New_Option__c.field-meta.xml
<CustomField>
    <fullName>New_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please select the additional option.</inlineHelpText>
    <label>New Option</label>
    <referenceTo>options__c</referenceTo>
    <relationshipLabel>Related PLDCs</relationshipLabel>
    <relationshipName>PLDCs</relationshipName>
    <type>Lookup</type>
</CustomField>