force-app/main/default/objects/PLDC__c/fields/Reactivate_Deal__c.field-meta.xml
<CustomField>
    <fullName>Reactivate_Deal__c</fullName>
    <label>Reactivate Deal</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>