force-app/main/default/objects/PLDC__c/fields/Remove_Deal_option__c.field-meta.xml
<CustomField>
    <fullName>Remove_Deal_option__c</fullName>
    <label>Remove Deal option</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>