force-app/main/default/objects/PLDC__c/fields/Removed_Option__c.field-meta.xml
<CustomField>
    <fullName>Removed_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Please select the option which has been removed from this deal.</inlineHelpText>
    <label>Removed Option</label>
    <referenceTo>options__c</referenceTo>
    <relationshipLabel>Related Removed Options</relationshipLabel>
    <relationshipName>Removed_Options</relationshipName>
    <type>Lookup</type>
</CustomField>