force-app/main/default/objects/PLDC__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>This field shows the overall status of the PLDC.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BDM Submitted</fullName>
            </value>
            <value>
                <fullName>QC Review</fullName>
            </value>
            <value>
                <fullName>Submitted to Publishing Team</fullName>
            </value>
            <value>
                <fullName>Published to Website!</fullName>
            </value>
            <value>
                <fullName>Post publish review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>