force-app/main/default/objects/PLDC__c/fields/Update_Important_Information_fine_print__c.field-meta.xml
<CustomField>
    <fullName>Update_Important_Information_fine_print__c</fullName>
    <label>Update Important Information (fine print</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>