force-app/main/default/objects/PLDC__c/fields/Update_What_You_Get__c.field-meta.xml
<CustomField>
    <fullName>Update_What_You_Get__c</fullName>
    <label>Update What You Get</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>