force-app/main/default/objects/PLDC__c/fields/Urgent__c.field-meta.xml
<CustomField>
    <fullName>Urgent__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please indicate if this is a time-sensitive change and needs to be actioned urgently.</inlineHelpText>
    <label>Urgent?</label>
    <type>Checkbox</type>
</CustomField>