force-app/main/default/objects/PLDC__c/fields/Will_this_excee__c.field-meta.xml
<CustomField>
    <fullName>Will_this_excee__c</fullName>
    <inlineHelpText>Especially important when adding allocations.</inlineHelpText>
    <label>Exceed Max Group Size in the fine print?</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>