force-app/main/default/objects/PLDC__c/fields/Will_this_impact_existing_customers__c.field-meta.xml
<CustomField>
    <fullName>Will_this_impact_existing_customers__c</fullName>
    <inlineHelpText>This is especially important if changing itinerary/inclusions.</inlineHelpText>
    <label>Will this impact existing customers?</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>