force-app/main/default/objects/PLDC__c/recordTypes/Add_Deal_Option.recordType-meta.xml
<RecordType>
    <fullName>Add_Deal_Option</fullName>
    <active>true</active>
    <description>Please use this record type to add a deal option.</description>
    <label>Add Deal Option</label>
</RecordType>