force-app/main/default/objects/PLDC__c/recordTypes/Add_Departure_Date.recordType-meta.xml
<RecordType>
    <fullName>Add_Departure_Date</fullName>
    <active>true</active>
    <description>Please use this record type to add new departure dates to the deal.</description>
    <label>Add Departure Date</label>
</RecordType>