force-app/main/default/objects/PLDC__c/recordTypes/Allocation_Addition_Removals.recordType-meta.xml
<RecordType>
    <fullName>Allocation_Addition_Removals</fullName>
    <active>true</active>
    <description>Please use this record to add or remove allocations to the deal.</description>
    <label>Allocation Addition / Removals</label>
</RecordType>