force-app/main/default/objects/PLDC__c/recordTypes/Change_Departure_Cities.recordType-meta.xml
<RecordType>
    <fullName>Change_Departure_Cities</fullName>
    <active>true</active>
    <description>Please use this record type to change a departure city for a deal.</description>
    <label>Change Departure Cities</label>
</RecordType>