force-app/main/default/objects/PLDC__c/recordTypes/Change_High_Season_Surcharge.recordType-meta.xml
<RecordType>
    <fullName>Change_High_Season_Surcharge</fullName>
    <active>true</active>
    <description>Please use this record type to change the high season surcharge for the deal.</description>
    <label>Change High Season Surcharge</label>
</RecordType>