force-app/main/default/objects/PLDC__c/recordTypes/Change_Minimum_or_Maximum.recordType-meta.xml
<RecordType>
    <fullName>Change_Minimum_or_Maximum</fullName>
    <active>true</active>
    <description>Please use this record to change the minimum or maximum PAX for the the deal.</description>
    <label>Change Minimum or Maximum #</label>
</RecordType>