force-app/main/default/objects/PLDC__c/recordTypes/Close_Deal.recordType-meta.xml
<RecordType>
    <fullName>Close_Deal</fullName>
    <active>true</active>
    <label>Close Deal</label>
</RecordType>