force-app/main/default/objects/PLDC__c/recordTypes/Close_Departure_Date.recordType-meta.xml
<RecordType>
    <fullName>Close_Departure_Date</fullName>
    <active>true</active>
    <description>Please use this record type to a close departure date for a deal.</description>
    <label>Close Departure Date</label>
</RecordType>