force-app/main/default/objects/PLDC__c/recordTypes/Extend_Book_by_Date.recordType-meta.xml
<RecordType>
    <fullName>Extend_Book_by_Date</fullName>
    <active>true</active>
    <label>Extend Book by Date</label>
</RecordType>