force-app/main/default/objects/PLDC__c/recordTypes/PLDC_TAD_Master.recordType-meta.xml
<RecordType>
    <fullName>PLDC_TAD_Master</fullName>
    <active>true</active>
    <description>This is the baseline Record Type, used for the different TAD event types (excludes NRMA).</description>
    <label>PLDC - TAD Master</label>
</RecordType>