force-app/main/default/objects/PLDC__c/recordTypes/Reactivate_Deal.recordType-meta.xml
<RecordType>
    <fullName>Reactivate_Deal</fullName>
    <active>true</active>
    <description>Please use this record type to reactivate the deal.</description>
    <label>Reactivate Deal</label>
</RecordType>