force-app/main/default/objects/PLDC__c/recordTypes/Remove_Deal_Option.recordType-meta.xml
<RecordType>
    <fullName>Remove_Deal_Option</fullName>
    <active>true</active>
    <description>Please use this record type to a remove a deal option.</description>
    <label>Remove Deal Option</label>
</RecordType>