force-app/main/default/objects/PLDC__c/recordTypes/Update_About_the_Deal.recordType-meta.xml
<RecordType>
    <fullName>Update_About_the_Deal</fullName>
    <active>true</active>
    <description>Please use this record type to update the &quot;About the Deal&quot; section of the deal.</description>
    <label>Update About the Deal</label>
</RecordType>