force-app/main/default/objects/PLDC__c/recordTypes/Update_Fine_Print.recordType-meta.xml
<RecordType>
    <fullName>Update_Fine_Print</fullName>
    <active>true</active>
    <description>Please use this record type to update the fine print for the deal.</description>
    <label>Update Fine Print</label>
</RecordType>