force-app/main/default/objects/PLDC__c/recordTypes/Update_What_You_Get.recordType-meta.xml
<RecordType>
    <fullName>Update_What_You_Get</fullName>
    <active>true</active>
    <description>Please use this record type to update the &quot;What You Get&quot; section on the Deal.</description>
    <label>Update What You Get</label>
</RecordType>