force-app/main/default/objects/PLDC__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Deal__c</columns>
    <columns>Urgent__c</columns>
    <columns>Main_Action_Type__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>